# SubTSMD

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
competitors/: __init__.py  _emd_star.py  _lama.py  _locomotif.py  _mmotifs.py
data/: README.md
data/motif-pairs/: generate.ipynb
data/noisy-attributes/: generate.ipynb  metadata.csv
data/noisy-data/: generate.ipynb  metadata.csv
data/physical-therapy/: generate.ipynb  metadata.csv
data/scalability/: generate.ipynb  metadata.csv
data/sub-tsmd-bench/: generate.ipynb  metadata.csv
data/synthetic/: generate.ipynb  metadata.csv
data/tsmd-bench/: generate.ipynb  metadata.csv
experiments/: README.md
experiments/analysis/: motif-pairs.ipynb  scalability.ipynb  test.ipynb
experiments/results/scalability/: SubTSMD-delta.csv  SubTSMD.csv
experiments/results/scalability/scalability/: dimension=10.csv  dimension=100.csv  dimension=20.csv  dimension=3.csv  dimension=30.csv  dimension=5.csv  dimension=50.csv  length=1000.csv  length=10000.csv  length=2000.csv  length=500.csv  length=5000.csv
experiments/scripts/: common.py  config.toml  motif-pairs.py  scalability-SubTSMD.py  scalability.py  test.py  tuned-parameters.toml  validation.py
notebooks/: example-time-series.ipynb  example.ipynb  include_constraints.ipynb  use-case-industrial-data.ipynb  use-case-physical-therapy.ipynb
sub_tsmd/: _SubTSMD.py  _SubspaceMotif.py  _SubspaceMotifSet.py  __init__.py  _data.py  _generated_data.py  _prom.py  _sub_tsmd.py  _visualization.py
(+428 files in other folders)
